chore(java): set Java 22 as supported minimum